Add phone and email fields
