# docs/swagger.json
@@ -249,15 +249,23 @@
         "http.User": {
             "type": "object",
             "required": [
+                "email",
                 "name",
                 "password",
+                "phone",
                 "username"
             ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 },
                 "username": {
